--- a/HTML5-CSS3-Guanabara/exercicios/ex026/mq002/estilos/style.css
+++ b/HTML5-CSS3-Guanabara/exercicios/ex026/mq002/estilos/style.css
@@ -7,3 +7,17 @@ margin: 0;
 padding: 0;
 list-style: none;
 }
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1{
+    color: white;
+    text-shadow: 2px 2px 0px #1727a3;
+    padding: 10px;
+}
